[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemy/MONSTER2.png" type="Texture" id=2]
[ext_resource path="res://Enemy/MONSTERSIZE.png" type="Texture" id=3]
[ext_resource path="res://Enemy/SPEAR.png" type="Texture" id=4]
[ext_resource path="res://Enemy/MONSTER1.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.2908, 6.58885 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3/SPEAR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( -35, 5 ), Vector2( 0, 5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3/SPEAR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "moving"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.33333, 5.03292 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 14.2908, 12 )

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="Htbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Htbox"]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Idle = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Movement" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 5 )
anims/moving = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 4, 4 )
scale = Vector2( 0.813, 0.813 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 4, 4 )
scale = Vector2( 0.813, 0.813 )
texture = ExtResource( 3 )

[node name="SPEAR" type="Sprite" parent="Sprite3"]
position = Vector2( -33.526, 5 )
scale = Vector2( 1.47601, 0.861009 )
z_index = -1
texture = ExtResource( 4 )

[node name="Spear" type="Area2D" parent="Sprite3/SPEAR"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3/SPEAR/Spear"]
position = Vector2( -14.4728, 0.681366 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4, 4 )
scale = Vector2( 0.813, 0.813 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 7 )

[connection signal="body_entered" from="Sprite3/SPEAR/Spear" to="." method="_on_Spear_body_entered"]
